@@ -447,7 +447,7 @@ void Missile::weaponGuidance(const LCreal dt)
                }
 
                BEGIN_RECORD_DATA_SAMPLE( getSimulation()->getDataRecorder(), REID_WEAPON_DETONATION )
-                  SAMPLE_3_OBJECTS( getLaunchVehicle(), this, getTargetPlayer() )
+                  SAMPLE_3_OBJECTS( this, getLaunchVehicle(), getTargetPlayer() )
                   SAMPLE_2_VALUES( DETONATE_ENTITY_IMPACT, detRange )
                END_RECORD_DATA_SAMPLE()
 
@@ -477,7 +477,7 @@ void Missile::weaponGuidance(const LCreal dt)
             }
 
             BEGIN_RECORD_DATA_SAMPLE( getSimulation()->getDataRecorder(), REID_WEAPON_DETONATION )
-               SAMPLE_3_OBJECTS( getLaunchVehicle(), this, getTargetPlayer() )
+               SAMPLE_3_OBJECTS( this, getLaunchVehicle(), getTargetPlayer() )
                SAMPLE_2_VALUES( DETONATE_DETONATION, detRange )
             END_RECORD_DATA_SAMPLE()
 
